hw/hw3/k8s/ingress-star.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ingress-star
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/evryzh(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: otus-service
                port:
                  number: 80
